<resources>
    <string name="app_name">Marathoner</string>
    <string name="icon">icon</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="_5000_10000">Если вы готовы начать свой путь к здоровью и красоте, то этот марафон для вас! Больше 5000 участниц смогли похудеть и изменить свои отношения с едой - теперь они не боятся есть шоколадки на ужин! Я научу вас рациональному питанию. Я не буду запрещать вам конфету или картошку, но объясню как их правильно учитывать в меню. Я покажу как тренироваться дома без дополнительного оборудования, отвечу на вопросы в прямых эфирах. Кроме того, в марафоне есть лекция с обратной связью от психолога по пищевому поведению. В конце марафона среди лучших результатов будут разыграны призы (10000 руб за первое место, фитнес-резинки за второе и протеиновые батончики за третье)! Вам понадобятся только кухонные весы и спортивная одежда..</string>
    <string name="demo">С включенными уведомлениями ты не пропустишь ни одного задания и будешь всегда оставаться в курсе событий марафона</string>
    <string name="friends_x">Friends (%1$d)</string>
    <string name="past_marathons">Past Marathons</string>
    <string name="marathon_invitations">Marathon Invitations</string>
    <string name="the_marathons_you_created_will_be_shown_here_but_then">The marathons you created will be shown here … but then</string>
    <string name="create_a_marathon">Create a Marathon</string>
    <string name="you_are_the_organizer">You are the organizer</string>
    <string name="friends">Friends</string>
    <string name="find_yourself_friends">Find yourself friends</string>
    <string name="you_can_find_friends_in_the_search_or_by_inviting_them_by_clicking_the_button">You can find friends in the search or by inviting them by clicking the (+) button</string>
    <string name="updating_user_data">Updating user data</string>
    <string name="hello_come_in">Hello, come in!</string>
    <string name="enter_the_app_to_interact">To participate in marathons, make new acquaintances and friends or create your own marathon - you need to enter the application</string>
    <string name="sign_in_with_apple">sign in with Apple</string>
    <string name="i_agree_by_reg_to_terms_and_con">By registering in the application, I agree to the processing of personal data and agree with the user agreement and privacy policy</string>
    <string name="something_went_wrong_try_again_later">Something went wrong, try again later</string>
    <string name="oh_something_went_wrong">Oh … something went wrong</string>
    <string name="this_page_does_not_load_please_try_again">This page does not load, please try again</string>
    <string name="retry">Retry</string>
    <string name="username">Username</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="country">Country</string>
    <string name="add_nphoto">Add\nPhoto</string>
    <string name="hidden_profile">Hidden Profile</string>
    <string name="other_users_will_only_see_your_photo_and_name">Other users will only see your photo and name</string>
    <string name="your_social_networks">Your social networks</string>
    <string name="faq">FAQ</string>
    <string name="report_a_problem">Report a problem</string>
    <string name="our_telegram">Our Telegram</string>
    <string name="additional">Additional</string>
    <string name="log_out">Log out</string>
    <string name="save">Save</string>
    <string name="invalid_username">Invalid username</string>
    <string name="invalid_first_name">Invalid first name</string>
    <string name="invalid_last_name">Invalid last name</string>
    <string name="registration_done_successfully">Registration done successfully</string>
    <string name="participants">Participants</string>
    <string name="x_friends">%1$d Friends</string>
    <string name="msg_invite_friends_to_join_you">So far, only you are participating in the marathon. Invite your friends to join you.</string>
    <string name="other_participants_x">Other Participants (%1$d)</string>
    <string name="new_post">New Post</string>
    <string name="write_a_new_post_here">Write a new post here</string>
    <string name="publish">Publish</string>
    <string name="photo">Photo</string>
    <string name="msg_grant_storage_permission_from_settings">in order to continue, please go to app settings and allow permissions to storage</string>
    <string name="video">Video</string>
    <string name="loading">Loading</string>
    <string name="okay">Okay</string>
    <string name="cancel">Cancel</string>
    <string name="confirm_logout">Confirm Logout</string>
    <string name="msg_confirm_logout">Are you sure want to logout?</string>
    <string name="publishing_your_post">Publishing your post</string>
    <string name="msg_post_published">Your post has been published successfully</string>
    <string name="now">Now</string>
    <string name="schedule_a_time">Schedule a time</string>
    <string name="we_ll_publishing_your_post_in_the_selected_date_and_time">We\'ll publishing your post in the selected date and time</string>
    <string name="done">Done</string>
    <string name="date">Date</string>
    <string name="when_do_you_want_to_publishing_your_post">When do you want to publishing your post?</string>
    <string name="time">Time</string>
    <string name="late">Late</string>
    <string name="tap_to_select">tap to select</string>
    <string name="select_date_first">Select date first</string>
    <string name="date_and_time_req">Please specify date and time</string>
    <string name="birthday_req">Birthday is required</string>
    <string name="country_req">Country is required</string>
    <string name="updating_profile">Updating your profile</string>
    <string name="profile_updated">Your profile updated successfully</string>
    <string name="msg_avatar_updated">"Your avatar updated successfully "</string>
    <string name="msg_unable_to_update_avatar">Unable to update your avatar</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="twitter">Twitter</string>
    <string name="title">Title</string>
    <string name="mandatory">Mandatory</string>
    <string name="the_participant_who_hasn_t_completed_the_task_will_eliminated_from_the_marathon">The participant who hasn\'t completed the task will eliminated from the marathon</string>
    <string name="attachment">Attachment</string>
    <string name="describe_your_assignment">Describe your assignment…</string>
    <string name="the_name_of_the_marathon">Name of the marathon…</string>
    <string name="category">Category</string>
    <string name="start_date">Start date</string>
    <string name="end_date">End date</string>
    <string name="add_a_description_of_the_marathon">Add a description of the marathon …</string>
    <string name="indoor_marathon">Indoor marathon</string>
    <string name="add_photo">Add Photo</string>
    <string name="please_pick_start_date_first">Please pick start date first</string>
    <string name="req_marathon_name">Marathon name is required</string>
    <string name="req_marathon_desc">Marathon description is required</string>
    <string name="req_marathon_image">Marathon image is required</string>
    <string name="req_marathon_start_date">Marathon start date is required</string>
    <string name="req_marathon_end_date">Marathon end date is required</string>
    <string name="creating_marathon">Creating marathon</string>
    <string name="marathon_created">Marathon has been created successfully</string>
    <string name="select">Select</string>
    <string name="marathon_category">Marathon Category</string>
    <string name="select_the_category_of_your_marathon_so_it_will_be_easier_to_find">Select the category of your marathon, so it will be easier to find</string>
    <string name="req_marathon_category">Marathon category is required</string>
    <string name="private_marathon">Private marathon</string>
    <string name="if_your_marathon_violates_applicable_laws_and_laws_of_physics">If your marathon violates applicable laws and laws of physics</string>

</resources>