<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/layoutRetry"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:orientation="vertical">


        <ImageView
            android:layout_width="@dimen/_96sdp"
            android:layout_height="@dimen/_96sdp"
            android:contentDescription="@string/icon"
            android:src="@drawable/emoji_error" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:text="@string/oh_something_went_wrong"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            android:textStyle="bold" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_4sdp"
            android:layout_marginEnd="@dimen/_40sdp"
            android:text="@string/this_page_does_not_load_please_try_again"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnRetry"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:backgroundTint="#EBEBED"
            android:paddingStart="@dimen/_40sdp"
            android:paddingEnd="@dimen/_40sdp"
            android:text="@string/retry"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            app:cornerRadius="@dimen/_20sdp" />

    </LinearLayout>
</layout>