<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".uregisterByGooglei.main.profile.guest.GuestProfileFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">


            <com.google.android.material.card.MaterialCardView
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_100sdp"
                app:cardCornerRadius="@dimen/_50sdp"
                app:cardElevation="0dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/icon"
                    android:src="@drawable/ic_profile_userpic" />
            </com.google.android.material.card.MaterialCardView>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:text="@string/hello_come_in"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_32sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_32sdp"
                android:text="@string/enter_the_app_to_interact"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                android:textStyle="bold" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_24sdp"
                android:gravity="center"
                android:orientation="horizontal">


                <ImageButton
                    android:id="@+id/registerByFacebook"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="@dimen/_4sdp"
                    android:layout_marginEnd="@dimen/_4sdp"
                    android:background="@drawable/social_btn_background"
                    android:contentDescription="@string/icon"
                    android:src="@drawable/logo_fb"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageButton
                    android:id="@+id/registerByVk"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="@dimen/_4sdp"
                    android:layout_marginEnd="@dimen/_4sdp"
                    android:background="@drawable/social_btn_background"
                    android:contentDescription="@string/icon"
                    android:src="@drawable/logo_vk"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageButton
                    android:id="@+id/registerByTwitter"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="@dimen/_4sdp"
                    android:layout_marginEnd="@dimen/_4sdp"
                    android:background="@drawable/social_btn_background"
                    android:contentDescription="@string/icon"
                    android:src="@drawable/logo_twitter"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <ImageButton
                    android:id="@+id/registerByGoogle"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="@dimen/_4sdp"
                    android:layout_marginEnd="@dimen/_4sdp"
                    android:background="@drawable/social_btn_background"
                    android:contentDescription="@string/icon"
                    android:src="@drawable/logo_google"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_32sdp"
                android:layout_marginTop="@dimen/_24sdp"
                android:layout_marginEnd="@dimen/_32sdp"
                android:text="@string/i_agree_by_reg_to_terms_and_con"
                android:textAlignment="center" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>